--- a/Параллельные_и_распределенные_вычисления/1.md
+++ b/Параллельные_и_распределенные_вычисления/1.md
@@ -23,6 +23,7 @@
 Несколько потоков выполнения могут существовать в рамках одного и того же процессами
 совместно использовать ресурсы, такие как память, тогда как процессы не разделяют этих
 ресурсов _(рис 1)_.
+![[Pasted image 20241211084457.png]]
 
 ```
 Рисунок 1. У процессов нет доступа к памяти других процессов.
@@ -33,7 +34,7 @@
 В пределах 1 потока различные потоки будут квантоваться т.е. выполняться по немного и по
 очереди.
 
-Причины использования нескольких процессов:
+## Причины использования нескольких процессов:
 
 - увеличение скорости решения задач
 - увеличение пропускной способности
@@ -41,7 +42,7 @@
 - взаимодействие с пользователем (выполнение тяжелых действий в отдельном потоке,
     интерфейс не зависает и можно даже отменить действие)
 
-Будущее за параллельными системами.
+## Будущее за параллельными системами.
 
 Видеокарта может решать параллельные задачи быстрее процессора, так, например в RTX 3090
 около 10000 маленьких процессоров. Поэтому видеокарты используют для нейросетей, майнинга
@@ -53,7 +54,7 @@
 В результате теста параллельных вычислений в PyTorch (фреймворк для нейросетей в питоне)
 видеокарта Intel Arc A580 была в 33 раза быстрее процессора Ryzen 7 5800.
 
-Реализации потоков:
+### Реализации потоков:
 
 - Реализация, которую предоставляет Операционная Система. Pthreads (POSIX) реализация в
     Linux и UNIX. Win 32 Threads. Solaris threads система поток в системе Solaris, сделано для
@@ -74,7 +75,7 @@
 работу и самостоятельно не остановится.
 
 Пример кода на C#:
-
+```
 using System.Threading;
 
 void myfunc() {
@@ -90,3 +91,4 @@ Thread myThread = new Thread(myfunc);
 //Запуск потока
 
 myThread.start();
+```
