--- a/Управление_командными_проектами/10.md
+++ b/Управление_командными_проектами/10.md
@@ -12,8 +12,7 @@
     проекта ресурсами (человеческими, техническими, программными и т.п.) и вопросами
     тестирования и интеграции элементов проекта
 
-Рассмотрим этапы тестирования и приведем типы ошибок, которые обнаруживаются на каждом
-из них
+Рассмотрим этапы тестирования и приведем типы ошибок, которые обнаруживаются на каждом из них:
 
 1. Этап разработки требований - при определении исходной концепции системы
     определение исходных требований заказчика к системе возникают ошибки аналитиков
@@ -49,13 +48,8 @@
           вызываемых подпрограмм функций и другое
        c. нарушение стандартов кодирования: плохие комментарии нерациональное
           выделение модулей и другое
-
-
-```
-d. использование одного имени для обозначения разных объектов или разных имен
-для обозначения одного объекта, плохая мнемоника имен
-e. несогласованное внесение изменений в программу разными разработчиками
-```
+       d. использование одного имени для обозначения разных объектов или разных имен для обозначения одного объекта, плохая мнемоника имен
+	   e. несогласованное внесение изменений в программу разными разработчиками
 4. Этап тестирования – на этом этапе ошибки допускаются тестировщиками, а также
     программистами при выполнении технологии сборки и тестирования, выбора тестовых
     наборов и сценариев тестирования и другое. Отказы программного обеспечения,
