--- a/Управление_командными_проектами/2.md
+++ b/Управление_командными_проектами/2.md
@@ -1,5 +1,5 @@
 
-Управление разработкой командных программных проектов
+## Управление разработкой командных программных проектов
 
 
 Исторически использовалась водопадная или каскадная модель, то есть все действия
@@ -18,9 +18,9 @@
     (Валидация)
 5. Эксплуатация и сопровождение программой системы.
 
+**Возвращение к начальной форме работ воспринимается как сопровождение.**
 
-Возвращение к начальной форме работ воспринимается как сопровождение.
-
+![[Pasted image 20241211084902.png]]
 
 Однако для программных продуктов такая модель не подходит по нескольким причинам:
 
@@ -39,35 +39,4 @@
 потребность в изменениях. Внесении изменений на любой стадии обязательно начинается с
 внесения изменений к ранее зафиксированным требованиям.
 
-Определение требований
-
-
-Проектирование
-
-
-Реализация
-
-
-Тестирование системы на
-соответствие проекту (Верификация)
-
-
-Тестирование проекта на соответствие
-требованиям (Валидация)
-
-
-Сопровождение
-
-
-
-Анализ требований
-
-
-Проектирование
-
-
-Реализация
-
-Тестирование
-
-
+![[Pasted image 20241211084920.png]]
