--- a/Параллельные_и_распределенные_вычисления/2.md
+++ b/Параллельные_и_распределенные_вычисления/2.md
@@ -1,11 +1,14 @@
 ```
 Параллельные и распределенные вычисления.
 ```
+
+```
 mythread.Suspend();
 
 mythread.Resume();
 
 mythread.Abort();
+```
 
 Отметим, что методы **suspend** , **abort** не обязательно сработают сразу после вызова. В случае
 **suspend** , среда исполнения .Net может остановить поток через несколько инструкций. Для того
@@ -21,22 +24,30 @@ ThreadAbortException
 
 Метод **join** используется в потоке для ожидания завершения другого потока
 
+```
 mythread.Join();
+```
 
 Так же можно задавать время ожидания завершения потока
 
+```
 mythread.Join( 100 );
+```
 
 Если время вышло, но поток не завершился, то продолжение все равно продолжит работу.
 
 Если необходимо приостановить поток из самого потока, можно использовать статический метод
 **Sleep**.
 
+```
 Thread.Sleep( 100 );
+```
 
 Поток может проснуться немого раньше или позже, чем заданное значение.
 
+```
 Thread.Sleep(0);
+```
 
 Поток пропускает свой ход и передает право выполняться другому потоку.
 
@@ -44,13 +55,17 @@ Thread.Sleep(0);
 это, ему необходима ссылка на объект потока, который представляет свой собственный поток, ее
 можно получить, используя статической свойство **CurrentThread**
 
+```
 Thread myThread = Thread.CurrentThread();
+```
 
 Возможность присвоить потоку имя, с помощью свойства **Name**
 
+```
 myThread.Name = “имя потока”;
+```
 
-**Приоритеты потоков в C#**
+## Приоритеты потоков в C#
 
 Когда в программе есть несколько потоков, выбор следующего потока для выполнения не
 является рандомным, дело в том, что у каждого потока имеется значение приоритета. Чем выше
@@ -58,27 +73,27 @@ myThread.Name = “имя потока”;
 именно ему. Если же приоритет потока не слишком высокий, значит он может подождать в
 очереди, пока выполняются более приоритетные потоки. Всего существует 5 вариантов
 приоритета потоков:
-
-
-1. Highest
-2. AboveNormal
-3. Normal
-4. BelowNormal
-5. Lowest
+1. **Highest**
+2. **AboveNormal**
+3. **Normal**
+4. **BelowNormal**
+5. **Lowest**
 
 Если у потоков одинаковые приоритеты, они выполняются по очереди. По умолчанию потоки
 имеют приоритет Normal, однако приоритет можно и менять.
 
+```
 myThread.Priority = ThreadPriority.Highest; // или имя другого приоритета
 
 myThread.Start(); // потом менять приоритет нельзя
+```
 
 Допустим мы решили присвоить потоку myThread самый высокий приоритет. В таком случае где-
 нибудь перед методом Start() мы можем менять его.
 
 Следует отметить, что приоритет метода Main изменить нельзя, он всегда будет в позиции normal.
 
-**Изменение типов потоков**
+### Изменение типов потоков
 
 Как известно поток может быть основным и фоновым. Так же при создании потока, он по
 умолчанию становится основным, однако его тип модно так же как и приоритет поменять.
