--- a/Параллельные_и_распределенные_вычисления/11.md
+++ b/Параллельные_и_распределенные_вычисления/11.md
@@ -40,3 +40,4 @@ TcpServerChannel tcpChannel = new TcpServerChannel(properties, sinkProvider);
 ShowChannelProperties(tcpChannel);
 ```
 
+[< Previous](10.md) | [Next >](12.md)
