--- a/Разработка_и_программирование_человекомашинного_интерфейса/10.md
+++ b/Разработка_и_программирование_человекомашинного_интерфейса/10.md
@@ -63,3 +63,4 @@ Photoshop. Очень важно не поддаться соблазну сде
 3. Должна быть возможность выполнять вычисления для диапазонов ячеек
 
 
+[< Previous](9.md) | [Next >](11.md)
