--- a/Разработка_и_программирование_человекомашинного_интерфейса/8.md
+++ b/Разработка_и_программирование_человекомашинного_интерфейса/8.md
@@ -71,3 +71,4 @@
 эволюционное прототипирование может быть полезным для выявления все больших и больших
 тонкостей в аспектах дизайна и его совершенствования.
 
+[< Previous](7.md) | [Next >](9.md)
