--- a/Разработка_и_программирование_человекомашинного_интерфейса/9.md
+++ b/Разработка_и_программирование_человекомашинного_интерфейса/9.md
@@ -49,3 +49,4 @@
 усердие дизайнеров, может длиться вечно, пока у них будут идеи, которые могут быть проверены.
 
 
+[< Previous](8.md) | [Next >](10.md)
