--- a/Управление_командными_проектами/1.md
+++ b/Управление_командными_проектами/1.md
@@ -80,3 +80,4 @@ processes_. В соответствии с приведенным стандар
 Исторически первой использовалась так называемая водопадная или каскадная модель.
 
 
+[Next >](2.md)
