--- a/Управление_командными_проектами/2.md
+++ b/Управление_командными_проектами/2.md
@@ -40,3 +40,4 @@
 внесения изменений к ранее зафиксированным требованиям.
 
 ![[Pasted image 20241211084920.png]]
+[< Previous](1.md) | [Next >](3.md)
