--- a/Параллельные_и_распределенные_вычисления/12.md
+++ b/Параллельные_и_распределенные_вычисления/12.md
@@ -61,4 +61,4 @@ ChannelServices.RegisterChannel(httpChannel);
 всех зарегистрированных каналов
 
 
-[< Previous](11.md)
+[< Previous](11.md) | [Next >](13.md)
