--- a/Разработка_и_программирование_человекомашинного_интерфейса/12.md
+++ b/Разработка_и_программирование_человекомашинного_интерфейса/12.md
@@ -37,4 +37,4 @@
 Где T – время реакции, a и b – константы, H – количество информации измеряемой в битах
 
 
-[< Previous](11.md)
+[< Previous](11.md) | [Next >](13.md)
