--- a/Разработка_и_программирование_человекомашинного_интерфейса/13.md
+++ b/Разработка_и_программирование_человекомашинного_интерфейса/13.md
@@ -38,3 +38,4 @@
 **2 закон:** любые 4 цвета линейно зависимы, т.е любой цвет всегда можно представить в виде линейной комбинации баховых цветов: cC = rR+bB+gG, где c,r,b,g != 0. Следовательно для смеси двух любых цветов справедливо следующее равенство: с1С1+с2С2 = (r1+r2)R + (b1+b2)B + (g1+g2)*G
 
 **3 закон**: если в смеси трех цветов один непрерывно изменяется, а другие остаются постоянными, то цвет смеси будет меняться непрерывно. Т.е. трехмерное цветовое пространство непрерывно.
+[< Previous](12.md) | [Next >](14.md)
