--- a/Управление_командными_проектами/12.md
+++ b/Управление_командными_проектами/12.md
@@ -68,4 +68,4 @@
 верификации системы и принятия решений о ее готовности и полезности
 
 
-[< Previous](11.md)
+[< Previous](11.md) | [Next >](13.md)
