--- a/Управление_командными_проектами/13.md
+++ b/Управление_командными_проектами/13.md
@@ -41,3 +41,4 @@
 
 Таким образом, были рассмотрены современные методы и процессы верификации и тестирования ПС, основанные на понятии программы - "белый ящик" и "черный ящик", а также на анализе реализованных в ПС функций. Определены критерии тестирования, типы ошибок, обнаруживаемых в программах, а также отказы и ошибки на этапах ЖЦ процесса тестирования. Сформулированы цели и задачи группы тестировщиков.
 
+[< Previous](12.md) | [Next >](14.md)
