--- a/Управление_командными_проектами/14.md
+++ b/Управление_командными_проектами/14.md
@@ -52,3 +52,4 @@
 Время, которое прогнозируется для выполнения проекта оценивается по следующей формуле: (О+4В+П)/6
 
 Представление более сложных связей между работами является более трудоемким и сложным процессом и поэтому этот метод реже используется на практике.
+[< Previous](13.md) | [Next >](15.md)
