--- a/Управление_командными_проектами/15.md
+++ b/Управление_командными_проектами/15.md
@@ -17,3 +17,4 @@
     
 5. Посмертный анализ. Это изучение своих ошибок при реализации предыдущего проекта, чтобы не повторить их в новом проекте. Так как каждая команда и фирма имеет свои особенности которые влияют на процесс разработки, то при анализе можно выделить закономерности, которые влияют на получение результатов.
     
+[< Previous](14.md)
